# GameEngine

./: CMakeLists.txt  README.md  circle.cpp  circle.h  color.h  init.cpp  init.h  main.cpp  object.cpp  object.h  point.h  square.cpp  square.h  triangle.cpp  triangle.h
